# run_pyscenic

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  binarize.py  pyproject.toml  run_pyscenic.py  subsample.py
.github/workflows/: build_push.yaml  test.yaml
tests/: __init__.py  conftest.py  test_binarize.py  test_expression.py  test_pipeline.py  test_subsample.py
