[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "run-pyscenic"
version = "0.1.1"
description = "Python wrapper for pySCENIC with GRNBoost2 and RegDiffusion support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "MJZ1"}]
keywords = ["pyscenic", "grn", "regdiffusion", "single-cell"]

dependencies = [
    "click>=8.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0,<1.24.0",  # Pin numpy < 1.24 to avoid np.object removal
    "scanpy>=1.9.0",
    "anndata>=0.8.0",
    "pyscenic>=0.12.1",
    "regdiffusion>=0.1.1",
    "loompy>=3.0.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "dask>=2023.0.0,<2024.0.0",  # Pin dask to version compatible with arboreto and pandas
    "setuptools>=45.0.0,<81.0.0",  # Pin setuptools < 81 to avoid pkg_resources deprecation
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
run-pyscenic = "run_pyscenic:main"

[tool.hatch.build.targets.wheel]
include = ["run_pyscenic.py", "binarize.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=. --cov-report=html --cov-report=term-missing"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
]
